# openshares

openshares-lib/: package.json
openshares-lib/lib/: browser.js
openshares-lib/lib/ecc/: README.md
openshares-lib/lib/serializer/: README.md
openshares-node/: CMakeLists.txt  genesis.json
openshares-node/libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp  plugin.cpp
openshares-node/libraries/app/include/capricorn/app/: api.hpp  api_access.hpp  application.hpp  database_api.hpp  full_account.hpp  impacted.hpp  plugin.hpp
openshares-node/libraries/chain/: CMakeLists.txt  account_evaluator.cpp  account_object.cpp  assert_evaluator.cpp  asset_evaluator.cpp  asset_object.cpp  balance_evaluator.cpp  block_database.cpp  buyback.cpp  confidential_evaluator.cpp  council_member_evaluator.cpp  database.cpp  db_balance.cpp  db_block.cpp  db_debug.cpp  db_delegate_schedule.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_update.cpp  delegate_evaluator.cpp  evaluator.cpp  fba_object.cpp  fork_database.cpp  genesis_state.cpp  get_config.cpp  index.cpp  is_authorized_asset.cpp  market_evaluator.cpp  proposal_evaluator.cpp  proposal_object.cpp  pts_address.cpp  special_authority.cpp  transaction_object.cpp  transfer_evaluator.cpp  vesting_balance_evaluator.cpp  vesting_balance_object.cpp  withdraw_permission_evaluator.cpp  (+1 more)
openshares-node/libraries/chain/hardfork.d/: 480.hf
openshares-node/libraries/chain/include/capricorn/chain/: account_evaluator.hpp  account_object.hpp  assert_evaluator.hpp  asset_evaluator.hpp  asset_object.hpp  balance_evaluator.hpp  balance_object.hpp  block_database.hpp  block_summary_object.hpp  budget_record_object.hpp  buyback.hpp  buyback_object.hpp  chain_property_object.hpp  confidential_evaluator.hpp  confidential_object.hpp  config.hpp  council_member_evaluator.hpp  council_member_object.hpp  custom_evaluator.hpp  database.hpp  db_with.hpp  delegate_evaluator.hpp  delegate_object.hpp  delegate_schedule_object.hpp  evaluator.hpp  exceptions.hpp  fba_accumulator_id.hpp  fba_object.hpp  fork_database.hpp  genesis_state.hpp  get_config.hpp  global_property_object.hpp  immutable_chain_parameters.hpp  internal_exceptions.hpp  is_authorized_asset.hpp  market_evaluator.hpp  market_object.hpp  node_property_object.hpp  operation_history_object.hpp  proposal_evaluator.hpp  (+14 more)
openshares-node/libraries/chain/include/capricorn/chain/protocol/: README.md  account.hpp  address.hpp  assert.hpp  asset.hpp  asset_ops.hpp  authority.hpp  balance.hpp  base.hpp  block.hpp  buyback.hpp  chain_parameters.hpp  confidential.hpp  config.hpp  council_member.hpp  custom.hpp  delegate.hpp  ext.hpp  fba.hpp  fee_schedule.hpp  market.hpp  memo.hpp  operations.hpp  proposal.hpp  protocol.hpp  special_authority.hpp  transaction.hpp  transfer.hpp  types.hpp  vesting.hpp  vote.hpp  withdraw_permission.hpp  worker.hpp
openshares-node/libraries/chain/protocol/: account.cpp  address.cpp  assert.cpp  asset.cpp  asset_ops.cpp  authority.cpp  block.cpp  confidential.cpp  council_member.cpp  custom.cpp  delegate.cpp  fee_schedule.cpp  market.cpp  memo.cpp  operations.cpp  proposal.cpp  transaction.cpp  transfer.cpp  types.cpp  vote.cpp  withdraw_permission.cpp  worker.cpp
openshares-node/libraries/db/: CMakeLists.txt  index.cpp  object_database.cpp  undo_database.cpp
openshares-node/libraries/db/include/capricorn/db/: flat_index.hpp  fwd.hpp  generic_index.hpp  index.hpp  object.hpp  object_database.hpp  object_id.hpp  simple_index.hpp  undo_database.hpp
openshares-node/libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
openshares-node/libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
openshares-node/libraries/egenesis/include/capricorn/egenesis/: egenesis.hpp
openshares-node/libraries/fc/: CMakeLists.txt
openshares-node/libraries/net/: CMakeLists.txt  core_messages.cpp  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
openshares-node/libraries/net/include/capricorn/net/: config.hpp  core_messages.hpp  exceptions.hpp  message.hpp  message_oriented_connection.hpp  node.hpp  peer_connection.hpp  peer_database.hpp  stcp_socket.hpp
openshares-node/libraries/plugins/: CMakeLists.txt
openshares-node/libraries/plugins/account_history/: CMakeLists.txt  account_history_plugin.cpp
openshares-node/libraries/plugins/account_history/include/capricorn/account_history/: account_history_plugin.hpp
openshares-node/libraries/plugins/debug_delegate/: CMakeLists.txt  debug_api.cpp  debug_delegate.cpp
openshares-node/libraries/plugins/debug_delegate/include/capricorn/debug_delegate/: debug_api.hpp  debug_delegate.hpp
openshares-node/libraries/plugins/delegate/: CMakeLists.txt  delegate.cpp
openshares-node/libraries/plugins/delegate/include/capricorn/delegate/: delegate.hpp
openshares-node/libraries/plugins/market_history/: CMakeLists.txt  market_history_plugin.cpp
openshares-node/libraries/plugins/market_history/include/capricorn/market_history/: market_history_plugin.hpp
openshares-node/libraries/time/: CMakeLists.txt  time.cpp
openshares-node/libraries/time/include/capricorn/time/: time.hpp
openshares-node/libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
openshares-node/libraries/wallet/: CMakeLists.txt  api_documentation_standin.cpp  wallet.cpp
openshares-node/programs/: CMakeLists.txt
openshares-node/programs/build_helpers/: CMakeLists.txt  member_enumerator.cpp
openshares-node/programs/cli_wallet/: CMakeLists.txt  main.cpp
openshares-node/programs/delegate_node/: CMakeLists.txt  main.cpp
openshares-ui/cli/: app.js  package.json
openshares-ui/dl/: package.json
openshares-ui/dl/programs/: bloom.py  bloom_filter_wallet.js
openshares-ui/dl/src/: dl_cli_index.js  idb-helper.js  idb-instance.js  (+1 more)
openshares-ui/web/: package.json
openshares-ws/: package.json
(+182 files in other folders)
